hermes_fuzz_executed_few_shot_v3/fuzz_72_execution
'use strict';
class Foo {
  constructor() {
    throw (0, _babelRuntime.awaitedGenerator.awrap)(regeneratorRuntime.mark(function _callee() {
      var bar;
      return regeneratorRuntime.wrap(function _callee$(_context) {
        while (1) {
          switch (_context.prev = _context.next) {
            case 0:
              bar = "bar";  

            case 1:
            case "end":
              return _context.stop();
          }
        }
      }, _callee);
    }));
  }

}
"use strict";
require("./module-130.js");
"use strict";
Foo;


Execution Output ------------------:
test.js:2:1: error: invalid statement encountered.
class Foo {
^~~~~~~~~~~
test.js:23:1: warning: the variable "require" was not declared in function "global"
require("./module-130.js");
^~~~~~~
test.js:25:1: warning: the variable "Foo" was not declared in function "global"
Foo;
^~~
Emitted 1 errors. exiting.
